--- a/composer.json
+++ b/composer.json
@@ -11,14 +11,15 @@
             "email": "mariusz.alef.bak@gmail.com"
         }
     ],
-    "require-dev": {
-        "sensio/framework-extra-bundle": "^3.0",
-        "phpunit/phpunit": "^5.5",
-        "symfony/phpunit-bridge": "^3.1"
-    },
     "require": {
         "php": "^5.6",
         "symfony/framework-bundle": "^3.1"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^5.5",
+        "symfony/phpunit-bridge": "^3.1",
+        "sebastian/phpcpd": "^2.0",
+        "phpmd/phpmd": "^2.4"
     },
     "autoload":{
         "psr-4":{
