--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,7 @@ cache:
     - $HOME/.composer/cache
 
 before_install:
+  - phpenv config-rm xdebug.ini || echo "xdebug not available"
   - composer self-update
   - if [ "$SYMFONY" != "" ]; then composer require "symfony/framework-bundle:$SYMFONY" --no-update; fi;
 
