--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     ],
     "require": {
         "php": "^5.6|^7.0",
-        "symfony/framework-bundle": "^3.0"
+        "symfony/framework-bundle": "^2.3|^3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.5",
