--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ language: php
 php:
   - 5.6
   - 7.0
+  - 7.1
   - hhvm
 
 branches:
@@ -24,7 +25,9 @@ matrix:
     - php: 7.0
       env: SYMFONY=3.0.*
     - php: 7.0
-      env: SYMFONY=3.1.*
+      env: SYMFONY=3.2.*
+    - php: 7.1
+      env: SYMFONY=3.2.*
   allow_failures:
     - php: hhvm
 
