--- a/composer.json
+++ b/composer.json
@@ -14,12 +14,12 @@
         }
     ],
     "require": {
-        "php": "^5.6|^7.0",
-        "symfony/framework-bundle": "^2.3|^3.0"
+        "php": ">=5.6.0",
+        "symfony/framework-bundle": "~2.3|~3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.5",
-        "symfony/phpunit-bridge": "^3.0",
+        "phpunit/phpunit": "~5.5",
+        "symfony/phpunit-bridge": "~3.0",
         "sebastian/phpcpd": "^2.0",
         "phpmd/phpmd": "^2.4"
     },
