--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         }
     ],
     "require": {
-        "php": "^5.6|^7.0",
+        "php": "^5.6|^7.0|^8.0",
         "symfony/framework-bundle": "^2.3|^3.0|^4.0",
         "xsolve-pl/model-factory": "^1.0"
     },
