--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,12 @@
     ],
     "require": {
         "php": "^5.6|^7.0|^8.0",
-        "symfony/framework-bundle": "^2.3|^3.0|^4.0",
+        "symfony/framework-bundle": "^2.3|^3.0|^4.0|^5.0",
         "xsolve-pl/model-factory": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.5",
-        "symfony/phpunit-bridge": "^3.0|^4.0",
+        "symfony/phpunit-bridge": "^3.0|^4.0|^5.0",
         "sebastian/phpcpd": "^2.0",
         "phpmd/phpmd": "^2.4"
     },
